# automatic-anki-deck-generator

./: README.md  main.py  pyproject.toml
