[tool.poetry]
name = "robot-anki-generator"
version = "0.1.0"
description = ""
authors = ["Brian Dawn <brian.t.dawn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
genanki = "^0.13.0"
boto3 = "^1.20.31"
pykakasi = "^2.2.1"

[tool.poetry.dev-dependencies]
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
